WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110989
[TexMap] REGRESSION(144183): It make negative delay tests fails
https://bugs.webkit.org/show_bug.cgi?id=110989
Summary
[TexMap] REGRESSION(144183): It make negative delay tests fails
Allan Sandfeld Jensen
Reported
2013-02-27 09:24:04 PST
Two tests of negative delays fails after
r144183
.
Attachments
Patch
(2.24 KB, patch)
2013-02-27 09:34 PST
,
Allan Sandfeld Jensen
noam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-02-27 09:34:50 PST
Created
attachment 190542
[details]
Patch
Allan Sandfeld Jensen
Comment 2
2013-02-27 09:44:15 PST
Committed
r144204
: <
http://trac.webkit.org/changeset/144204
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug