[TexMap] REGRESSION(144183): It make negative delay tests fails https://bugs.webkit.org/show_bug.cgi?id=110989

Reviewed by Noam Rosenthal.

Do not apply a negative offset to the animation starttime send to the GraphicLayerClient,
it needs the actual animation start not a virtual start.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::addAnimation):

Canonical link: https://commits.webkit.org/129292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144204 268f45cc-cd09-0410-ab3c-d52691b4dbfc